commit del 19/01/2021 ore 16:09

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 pring.freemarker.template-loader-path: classpath:/templates  
 spring.freemarker.suffix: .ftl
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/provinceita
-spring.datasource.username=postgres
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
+spring.jpa.hibernate.ddl-auto:update
+spring.datasource.url:jdbc:postgresql://localhost:5432/provinceita
+spring.datasource.username:postgres
+spring.datasource.password:
+spring.jpa.properties.hibernate.dialect:org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
